--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-OPENAI_API_ORGANISATION = "org-1Wig5szKzDYWI9tUmk1nfBES"
-OPENAI_API_KEY = "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"
+OPENAI_API_ORGANISATION = ""
+OPENAI_API_KEY = ""
 
